--- a/test/nodes.yaml
+++ b/test/nodes.yaml
@@ -50,6 +50,8 @@ nodes:
             base_dir: ../../../saltstack-tools-formula
           - name: sysctl
             base_dir: ../../../saltstack-sysctl-formula
+          - name: users
+            base_dir: ../../../saltstack-users-formula
   client1:
     base_box: DEV_Debian_78_min-virtualbox-v0.3-9-gdba595d.box
     base_box_basedir: ../../../vagrant-devenv/shared/boxes
