--- a/test/nodes.yaml
+++ b/test/nodes.yaml
@@ -58,9 +58,11 @@ nodes:
     ip: 10.10.10.101
     provision:
       - name: saltstack_prepare
+        modules_custom: ../../../salt-modules/_modules
   client2:
     base_box: DEV_Debian_78_min-virtualbox-v0.3-9-gdba595d.box
     base_box_basedir: ../../../vagrant-devenv/shared/boxes
     ip: 10.10.10.102
     provision:
       - name: saltstack_prepare
+        modules_custom: ../../../salt-modules/_modules
