--- a/test/nodes.yaml
+++ b/test/nodes.yaml
@@ -1,23 +1,22 @@
 ---
 defaults:
-  domain: local.arnoldbechtoldt.com
+  domain: mon.local.arnoldbechtoldt.com
+  osfam: debian
+  base_box: DEV_Debian_78_salt_arbe_git-virtualbox-v0.4-9-gb812291.box
+  base_box_basedir: ../../../vagrant-devenv/shared/boxes
   synced_folders:
-    - src: scripts/debian
+    - src: assets/scripts/provision/
       dst: /vagrant/scripts
     - src: ../../monitoring/
-      dst: /vagrant/monitoring
+      dst: /vagrant/src/monitoring
     - src: ../share
       dst: /vagrant/share
-  provision:
-    - name: basic
-    - name: saltstack_setup
 nodes:
   master1:
-    base_box: DEV_Debian_78_min-virtualbox-v0.3-9-gdba595d.box
-    base_box_basedir: ../../../vagrant-devenv/shared/boxes
     ip: 10.10.10.100
     provision:
-      - name: saltstack_prepare
+      - name: basic
+      - name: saltstack_formulas
         modules_custom: ../../../salt-modules/_modules
         formulas:
           - name: skeleton
@@ -52,17 +51,21 @@ nodes:
             base_dir: ../../../saltstack-sysctl-formula
           - name: users
             base_dir: ../../../saltstack-users-formula
+      - name: saltstack_config
+      - name: saltstack_services
   client1:
-    base_box: DEV_Debian_78_min-virtualbox-v0.3-9-gdba595d.box
-    base_box_basedir: ../../../vagrant-devenv/shared/boxes
     ip: 10.10.10.101
     provision:
-      - name: saltstack_prepare
+      - name: basic
+      - name: saltstack_formulas
         modules_custom: ../../../salt-modules/_modules
+      - name: saltstack_config
+      - name: saltstack_services
   client2:
-    base_box: DEV_Debian_78_min-virtualbox-v0.3-9-gdba595d.box
-    base_box_basedir: ../../../vagrant-devenv/shared/boxes
     ip: 10.10.10.102
     provision:
-      - name: saltstack_prepare
+      - name: basic
+      - name: saltstack_formulas
         modules_custom: ../../../salt-modules/_modules
+      - name: saltstack_config
+      - name: saltstack_services
