add kibana formula

--- a/test/nodes.yaml
+++ b/test/nodes.yaml
@@ -27,6 +27,8 @@ nodes:
             base_dir: ../../../saltstack-salt-formula
           - name: java
             base_dir: ../../../saltstack-java-formula
+          - name: kibana
+            base_dir: ../../../saltstack-kibana-formula
           - name: elasticsearch
             base_dir: ../../../saltstack-elasticsearch-formula
           - name: repos
